
                               --------------------
						
				    Version History:
				    ================
+ : new feature
* : changed
! : bufgix						
- : feature removed or disabled because of pending bugs

Version 0.9.9.92 - 2005/03/30

        ! fixed broken dialog layout on forward message
        
        ! nicknames may again contain characters like { and }

Version 0.9.9.91 - 2005/03/28

        * non-unicode version now sets the IEEF_NO_UNICODE flag for IEview. That may
          resolve some crash problems.
          
        * some fixes related to the new icon loading stuff (ico lib).
        
        * rich edit max size fix for the message log
        
        * more aggressivly obeys the maxmessagelen flag returned by a 
          protocol to set the maximum allowed size of a message typed into the input
          area.

        ! fixed typing notify icon in contact list and tray (did appear as blank).
        
Version 0.9.9.9 - 2005/03/24

        * after quoting, input focus is set to the message input area.
        
        + added support for the IcoLib plugin. If IcoLib is installed, you can change
          tabSRMM icons using the GUI provided by IcoLib. You still NEED to install
          an icon pack and put it into \plugins. This icon pack provides the default
          icons, and you must not remove it, even if you override icons via IcoLib.
          
          Iconpacks are still supported, so if you don't use IcoLib, you can still
          change your icons by installing a different tabsrmm_icons.dll.
          
        - the feature to load an icon pack at runtime has been removed, because of the
          IcoLib support. IcoLib is a more comfortable way to change your icons at
          runtime w/o having to restart miranda.
          
        ! fixed vertical maximize when taskbar is at the top (hope so)
        
        * the avatar does no longer react on left button clicks. This stops the flickering